--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,18 @@
             <version>1.3.0.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20200518</version>
+        </dependency>
+
+        <!--signature-->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.11</version>
+        </dependency>
 
         <dependency>
             <groupId>org.mybatis</groupId>
