--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,15 @@
 mysql=warm-castle-294913:asia-southeast1:project24db
 password=root
-
+logging.file.path=./logs
+log4j.logger.yourmapperpackage=DEBUG
 jdbc:mysql:///warm-castle-294913:asia-southeast1:project24db?cloudSqlInstance=project24db&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=root
 
 
 #Turn Statistics on
-spring.jpa.properties.hibernate.generate_statistics=true
-logging.level.org.hibernate.stat=debug
 # Show all queries
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://34.87.127.235/24_workspace?cloudSqlInstance=project24db&useSSL=false
 spring.data.jpa.repositories.bootstrap-mode=default
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type=trace
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
